syntax = "proto3";

option csharp_namespace = "LibraryService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetListOfBooks(stream HelloRequest) returns (stream BooksTitles);
  rpc GetBookInfo(stream HelloRequest) returns (stream BookInfo);
  rpc AddBook(stream NewBook) returns (stream HelloReply);
  rpc DeleteBook(stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message BooksTitles{
	string books = 1;
}
message NewBook{
	string name=1;
	string author=2;
	int32 shelf =3;
	int32 room=4;
}
message BookInfo{
	string name=1;
	string author = 2;
	string description = 3;
	string shortdesc =4;
}

